--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
   <link rel="stylesheet" href="./css/loader.css">
   <link rel="stylesheet" href="./css/earth_star.css">
   <link rel="stylesheet" href="./css/time.css">
+  <link rel="stylesheet" href="./css/avatar.css">
 
 </head>
 
 <body>
-  <div class="loader"></div>
+  <div class="loader">
+  </div>
+
+  <div class="avatar">
+    <div class="avatar_cover"></div>
+  </div>
+
   <div class="center_container">
     <div class="center_inner_container">
       <div class="center_inner_lighting_container">
@@ -67,8 +74,8 @@
         </div>
       </div>
     </div>
-
   </div>
+
 </body>
 <script type="module" src="./js/init.js"></script>
 
