--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Web</title>
+  <title>WorldV</title>
   <link rel="icon" href="" type="image/png">
   <link rel="stylesheet" href="./css/general.css">
   <link rel="stylesheet" href="./css/loader.css">
