--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <div class="center_inner_content_container">
           <div class="earth"></div>
           <div class="section-banner"></div>
+          <div class="ring"></div>
         </div>
       </div>
     </div>
