--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/earth_star.css">
   <link rel="stylesheet" href="./css/time.css">
   <link rel="stylesheet" href="./css/avatar.css">
+  <link rel="stylesheet" href="./css/wave.css">
 
 
 </head>
@@ -53,7 +54,7 @@
     <div class="center_inner_container">
       <div class="center_inner_lighting_container">
         <div class="center_inner_content_container">
-
+          <div class="wave_container playing"></div>
         </div>
       </div>
     </div>
@@ -71,7 +72,7 @@
     <div class="center_inner_container">
       <div class="center_inner_lighting_container">
         <div class="center_inner_content_container">
-
+          <div class="wave_container playing"></div>
 
         </div>
       </div>
