--- a/index.html
+++ b/index.html
@@ -17,89 +17,74 @@
 </head>
 
 <body>
-<div class="loader">
-</div>
+    <div class="loader"></div>
+    <!-- <div class="section-banner"></div> -->
 
-<div class="avatar">
-    <div class="avatar_cover">
-        <div class="avatar_img"></div>
-    </div>
-</div>
 
-<div class="center_container">
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
 
+    <div class="half_container">
+        <div class="right_container">
+            <div class="right_top_container">
+                <div class="avatar">
+                    <div class="avatar_cover">
+                        <div class="avatar_img"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="right_middle_container">
+
+            </div>
+            <div class="right_bottom_container">
             </div>
         </div>
     </div>
 
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
+
+    <div class="half_container">
+        <div class="left_container">
+            <div class="center_container">
+                <div class="center_inner_container">
+                    <div class="center_inner_lighting_container">
+                        <div class="center_inner_content_container">
+                            <div class="earth"></div>
+
+                            <div class="ring"></div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="center_inner_container">
+                    <div class="center_inner_lighting_container">
+                        <div class="center_inner_content_container">
+                            <div class="time_card"></div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
-        </div>
-    </div>
+            <div class="center_container">
+                <div class="center_inner_container">
+                    <div class="center_inner_lighting_container">
+                        <div class="center_inner_content_container">
+                            <div class="wave_container playing"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="center_inner_container">
+                    <div class="center_inner_lighting_container">
+                        <div class="center_inner_content_container">
+                            <div class="wave_container playing"></div>
 
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
-
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
 
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
-                <div class="wave_container playing"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
-                <div class="earth"></div>
-                <div class="section-banner"></div>
-                <div class="ring"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
-                <div class="wave_container playing"></div>
-
-            </div>
-        </div>
-    </div>
-
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
-
-            </div>
-        </div>
-    </div>
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
-                <div class="time_card"></div>
-            </div>
-        </div>
-    </div>
-    <div class="center_inner_container">
-        <div class="center_inner_lighting_container">
-            <div class="center_inner_content_container">
-
-            </div>
-        </div>
-    </div>
-</div>
 
 </body>
 <script type="module" src="./js/init.js"></script>
