--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="loader"></div>
-    <!-- <div class="section-banner"></div> -->
+    <div class="section-banner"></div>
 
 
 
@@ -160,7 +160,7 @@
                 
                                 <button class="home-badge home-object"></button>
                                 <div id="home-blist">
-                                    <img class="blistimage" src="./assets/public/image.png" alt="Lucas's 88x31 badge">
+                                    <img class="blistimage" src="./img/Icon/glask.png" alt="Lucas's 88x31 badge">
                                     <p>Hi there! I'm Lucas, a software enthusiast passionate about technology, coding, and
                                         innovation.
                                         Feel free to save my
@@ -169,7 +169,7 @@
                                         knowledge. Explore more
                                         about my journey, projects, and what I’m building:</p>
                                     <a href="https://lucaslyu.com" target="_blank">
-                                        <img class="blistimage" src="./assets/public/image.png" alt="Lucas's website">
+                                        <img class="blistimage" src="./img/Icon/glask.png" alt="Lucas's website">
                                     </a>
                                     <div class="blistarrow"></div>
                                 </div>
